[package]
name = "kitten-anno-lib"
version = "0.3.2"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["YosakuraTohu <YosakuraTohu@outlook.com>"]
homepage = "https://github.com/YosakuraTohu/kitten-anno-lib"
repository = "https://github.com/YosakuraTohu/kitten-anno-lib"
description = "World tree anno library for Rust"
keywords = ["date", "anno", "calendar"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = { version = "^1.18.0", default-features = false, features = ["std"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
chrono = { version = "^0.4.26", default-features = false, features = ["clock"] }

[target.'cfg(target_family = "wasm")'.dependencies]
chrono = { version = "^0.4.26", default-features = false, features = ["clock", "wasmbind"] }
wasm-bindgen = { version = "^0.2.87", default-features = false, features = ["std"] }

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = { version = "^0.3.37", default-features = false }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
