[package]
name = "kitten-anno-lib"
version = "0.3.16"
edition = "2021"
rust-version = "1.70"
license = "MIT OR Apache-2.0"
authors = ["YosakuraTohu <YosakuraTohu@outlook.com>"]
homepage = "https://github.com/YosakuraTohu/kitten-anno-lib"
repository = "https://github.com/YosakuraTohu/kitten-anno-lib"
description = "World tree anno library for Rust"
keywords = ["date", "anno", "calendar"]
categories = ["command-line-utilities"]
readme = "README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["chrono/clock"]
wasmbind = ["std", "chrono/wasmbind", "dep:wasm-bindgen"]

[dependencies]
lazy_static = "^1.4.0"
chrono = { version = "^0.4.26", default-features = false }
wasm-bindgen = { version = "^0.2.87", optional = true, default-features = false, features = ["std"] }

[target.'cfg(features = "std")'.dependencies]
lazy_static = "^1.4.0"

[target.'cfg(not(features = "std"))'.dependencies]
lazy_static = { version =  "^1.4.0", features = ["spin_no_std"] }

[dev-dependencies]
wasm-bindgen-test = { version = "^0.3.37", default-features = false }

[profile.release]
codegen-units = 1
lto = true
strip = true
panic = "abort"
